After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645054 - XDG directories are shown in the sidebar even when the directories do not exist
XDG directories are shown in the sidebar even when the directories do not exist
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Sidebar
2.91.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-17 18:11 UTC by Stefano Teso
Modified: 2012-10-22 21:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Stefano Teso 2011-03-17 18:11:08 UTC
Clicking on "Pictures" when there's no corresponding /home/foo/Picture directory results in an error dialog.

Probably we should just skip unexistent XDG dirs entirely (and possibly update the sidebar if they are created)
Comment 1 Cosimo Cecchi 2011-03-21 14:03:54 UTC
Stefano, I think this is fixed already with this commit [1]; are you reproducing this with latest master?

[1] http://git.gnome.org/browse/nautilus/commit/?id=18b496bc28a59987d161b5272244a808f5c06e2c
Comment 2 Stefano Teso 2011-03-21 14:13:25 UTC
Yes. To reproduce, just delete /home/foo/Pictures. Renaming or moving the Pictures directory seems to work flawlessly.
Comment 3 Cosimo Cecchi 2011-03-21 15:46:42 UTC
Ok, I can reproduce this.
Comment 4 Cosimo Cecchi 2012-10-22 21:11:50 UTC
I pushed a fix to git master for this now, thanks for the report.