places-sidebar: don't add non-existent XDG bookmarks

If an XDG bookmark has been removed from ~/.config/user-dirs.dirs, or if
its entry there points to an invalid directory, don't add it to the
places sidebar.

https://bugzilla.gnome.org/show_bug.cgi?id=645054